# funocaml-o11y

./: .gitignore  Makefile  README.md  dune-project  flake.nix  funocaml-o11y.opam  funocaml-o11y.opam.template
.github/workflows/: main.yaml  nix.yaml
lib/: Chat.ml  Computation.ml  Error.ml  Greet.ml  Index.ml  Metrics.ml  OMiddleware.ml  Observability.ml  dune
static/: chat.html
test/: dune
